src/static/css/pages/_proposals.scss
body.dashboard{
    font-weight: 400;
    background:#F3F3F3;

    p.welcome{
        font-size: 21px;
        color: #4A4A4A;
        line-height: 24px;
        margin: 35px 0 20px 5px;
    }
    .sidebar{
        padding: 0;

        .nav-sidebar{
            li{
                a{
                    padding: 24px 0 0 28px;
                    height: 65px;
                    font-size:16px;
                    color: #BBBBBB;
                    line-height:19px;
                    border-left: 4px solid #FFFFFF;
                    border-bottom: 1px solid #EEEEEE;

                    &:hover{
                        color:#BBBBBB;
                        background-color: #F8F8F8;
                        border-left: 4px solid #F8F8F8;
                    }
                }
                &.active a{
                    color:#3E6DF5;
                    border-left: 4px solid #3E6DF5;
                    // &:hover{
                    //     color:#BBBBBB;
                    //     background-color: transparent;
                    // }
                }
            }
        }
    }

    .alert-warning{
        background: #FFF2D0;
        border: 1px solid #F1DFB1;
        border-radius:4px;
        padding: 15px 20px;
        font-size:13px;
        color:#4A4A4A;
        line-height:20px;
        .btn{
            margin: 0;
            padding: 0;
            color:#3E6DF5;
        }
    }
    .main-container{
        background:#FFFFFF;
        border: 1px solid #EEEEEE;
        border-radius:4px;
        margin-bottom: 20px;

        .main{
            min-height: 712px;
            border-left-style: solid;
            border-left-width: 1px;
            border-left-color: #EEEEEE;
            padding: 0;


            .table-panel {
                padding: 33px 33px 0px 33px;
            }

            > form{
                padding:  33px;
            }
        }
    }
}

.cancel-form {
    position: relative;
}

/* Must include .table to override Bootstrap styles. */
.table.proposals-table {
    thead{
        background:#F8F8F8;
    }
    th, td {
        font-weight: 400;
        font-size: 13px;
        white-space: nowrap;

        &.proposal-title {
            white-space: normal;
        }
    }
    th{
        color:#9B9B9B;
        line-height:22px;
        border-bottom: 1px solid #EEEEEE;
        height: 40px;
        padding-left: 34px;
    }
    td{
        color:#4A4A4A;
        line-height: 25px;
        padding: 32px 34px;

        &.proposal-title{
            font-size: 16px;
        }

        form{
            padding: 0;
            margin-top: -4px;
        }
    }
}

.profile_pic_panel {
    margin: 20px 0 40px 0;
    > div{
        display: inline-block;;
        margin-right: 20px;
    }
    .pic {
        width: 60px;
        height: 60px;
    }
    .upload-btn {
        position: relative;
        display: inline-block;

        > span {
            font-size: 13px;
            color: #3E6DF5;
            line-height: 15px;
            cursor: pointer;
            display: hidden;
        }

        > input {
            -webkit-appearance: none;
            position: absolute;
            top: 0;
            left: 0;
            min-width: 100%;
            min-height: 100%;
            opacity: 0;
        }
    }
}

.form-group {
    margin-bottom: 40px;
}

.field {
    margin-top: 20px;
    background: #FFFFFF;
    border: 1px solid #D4D4D4;
    border-radius: 3px;
}

.field_title {
    font-size: 16px;
    color: #4A4A4A;
    line-height: 19px;
    font-weight: normal;
}

.name_field {
    width: 308px;
    height: 44px;
}

textarea.form-control {
    width: 100%;
    min-height: 150px;
    resize: vertical;
    font-family: $font-family-monospace;
}

#user_profile_update_form {
    textarea.form-control {
        width: 100%;
        @media screen and (min-width: $screen-md-min) {
            max-width: 75%;
        }
        @media screen and (min-width: $screen-lg-min) {
            max-width: 600px;
        }
    }
}

.proposals{
    p{
        padding: 20px 33px;
    }
}

